parser.output
State 14 conflicts: 1 reduce/reduce
State 144 conflicts: 1 shift/reduce


Grammar

    0 $accept: Program $end

    1 $@1: /* empty */

    2 Program: T_PROGRAM T_ID $@1 ';' OptTypeDefinitions OptVariableDeclarations OptSubprogramDeclarations CompoundStatement '.'

    3 TypeDefinitions: T_TYPE TypeDefinition ';' _OptTypeDefinitions

    4 OptTypeDefinitions: /* empty */
    5                   | TypeDefinitions

    6 _OptTypeDefinitions: /* empty */
    7                    | TypeDefinition ';' _OptTypeDefinitions

    8 $@2: /* empty */

    9 $@3: /* empty */

   10 TypeDefinition: T_ID $@2 '=' Type $@3

   11 VariableDeclarations: T_VAR VariableDeclaration ';' _OptVariableDeclarations

   12 $@4: /* empty */

   13 VariableDeclaration: IdentifierList ':' Type $@4

   14 OptVariableDeclarations: /* empty */
   15                        | VariableDeclarations

   16 _OptVariableDeclarations: /* empty */
   17                         | VariableDeclaration ';' _OptVariableDeclarations

   18 OptSubprogramDeclarations: /* empty */
   19                          | SubprogramDeclarations

   20 SubprogramDeclarations: /* empty */
   21                       | SubprogramDeclaration ';' SubprogramDeclarations

   22 SubprogramDeclaration: ProcedureDeclaration
   23                      | FunctionDeclaration

   24 $@5: /* empty */

   25 $@6: /* empty */

   26 ProcedureDeclaration: T_PROCEDURE T_ID $@5 '(' FormalParameterList $@6 ')' ';' DeclarationBody

   27 $@7: /* empty */

   28 $@8: /* empty */

   29 FunctionDeclaration: T_FUNCTION T_ID $@7 '(' FormalParameterList ')' ':' ResultType $@8 ';' DeclarationBody

   30 DeclarationBody: Block
   31                | T_FORWARD

   32 $@9: /* empty */

   33 FormalParameterList: $@9

   34 $@10: /* empty */

   35 $@11: /* empty */

   36 FormalParameterList: $@10 IdentifierList ':' Type $@11 OptIdentifiers

   37 OptIdentifiers: /* empty */

   38 $@12: /* empty */

   39 OptIdentifiers: ';' IdentifierList ':' Type $@12 OptIdentifiers

   40 $@13: /* empty */

   41 Block: $@13 CompoundStatement
   42      | VariableDeclarations CompoundStatement

   43 CompoundStatement: T_BEGIN StatementSequence T_END

   44 StatementSequence: Statement Statements

   45 Statement: SimpleStatement
   46          | StructuredStatement

   47 SimpleStatement: /* empty */
   48                | AssignmentStatement
   49                | ProcedureStatement

   50 $@14: /* empty */

   51 AssignmentStatement: Variable $@14 T_ASSIGNMENT Expression

   52 $@15: /* empty */

   53 ProcedureStatement: T_ID $@15 '(' ActualParameterList ')'

   54 StructuredStatement: CompoundStatement
   55                    | T_IF Expression T_THEN Statement CloseIf
   56                    | T_WHILE Expression T_DO Statement

   57 $@16: /* empty */

   58 StructuredStatement: T_FOR T_ID $@16 T_ASSIGNMENT Expression T_TO Expression T_DO Statement

   59 CloseIf: /* empty */
   60        | T_ELSE Statement

   61 Statements: /* empty */
   62           | ';' Statement Statements

   63 $@17: /* empty */

   64 Type: T_ID $@17

   65 $@18: /* empty */

   66 $@19: /* empty */

   67 $@20: /* empty */

   68 $@21: /* empty */

   69 Type: T_ARRAY '[' Constant $@18 T_RANGE Constant $@19 ']' T_OF $@20 Type $@21

   70 $@22: /* empty */

   71 $@23: /* empty */

   72 Type: T_RECORD $@22 FieldList T_END $@23

   73 ResultType: T_ID

   74 FieldList: /* empty */

   75 $@24: /* empty */

   76 FieldList: IdentifierList ':' Type $@24 OptIdentifiers

   77 Constant: T_INT
   78         | Sign T_INT

   79 Expression: SimpleExpression
   80           | SimpleExpression RelationalOp SimpleExpression

   81 RelationalOp: T_RELOP
   82             | '='

   83 SimpleExpression: Term Summand
   84                 | Sign Term Summand

   85 AddOp: T_ADDOP
   86      | T_OR

   87 Term: Factor Multiplicand

   88 Summand: /* empty */
   89        | AddOp Term Summand

   90 MulOp: T_MULOP
   91      | T_DIV
   92      | T_MOD
   93      | T_AND

   94 Factor: T_INT
   95       | T_STR
   96       | Variable
   97       | FunctionReference
   98       | T_NOT Factor
   99       | '(' Expression ')'

  100 Multiplicand: /* empty */
  101             | MulOp Factor Multiplicand

  102 $@25: /* empty */

  103 FunctionReference: T_ID $@25 '(' ActualParameterList ')'

  104 $@26: /* empty */

  105 Variable: T_ID $@26 ComponentSelection

  106 ComponentSelection: /* empty */

  107 $@27: /* empty */

  108 $@28: /* empty */

  109 ComponentSelection: '.' $@27 T_ID $@28 ComponentSelection

  110 $@29: /* empty */

  111 $@30: /* empty */

  112 ComponentSelection: '[' $@29 Expression ']' $@30 ComponentSelection

  113 ActualParameterList: /* empty */
  114                    | Expression OptExpressions

  115 OptExpressions: /* empty */
  116               | ',' Expression OptExpressions

  117 $@31: /* empty */

  118 IdentifierList: T_ID $@31 Identifiers

  119 Identifiers: /* empty */

  120 $@32: /* empty */

  121 Identifiers: ',' T_ID $@32 Identifiers

  122 Sign: '+'
  123     | '-'


Terminals, with rules where they appear

$end (0) 0
'(' (40) 26 29 53 99 103
')' (41) 26 29 53 99 103
'+' (43) 122
',' (44) 116 121
'-' (45) 123
'.' (46) 2 109
':' (58) 13 29 36 39 76
';' (59) 2 3 7 11 17 21 26 29 39 62
'=' (61) 10 82
'[' (91) 69 112
']' (93) 69 112
error (256)
T_AND (258) 93
T_BEGIN (259) 43
T_FORWARD (260) 31
T_DIV (261) 91
T_DO (262) 56 58
T_ELSE (263) 60
T_END (264) 43 72
T_FOR (265) 58
T_FUNCTION (266) 29
T_IF (267) 55
T_ARRAY (268) 69
T_MOD (269) 92
T_NOT (270) 98
T_OF (271) 69
T_OR (272) 86
T_PROCEDURE (273) 26
T_PROGRAM (274) 2
T_RECORD (275) 72
T_THEN (276) 55
T_TO (277) 58
T_TYPE (278) 3
T_VAR (279) 11
T_WHILE (280) 56
T_ID (281) 2 10 26 29 53 58 64 73 103 105 109 118 121
T_INT (282) 77 78 94
T_STR (283) 95
T_ASSIGNMENT (284) 51 58
T_RANGE (285) 69
T_RELOP (286) 81
T_MULOP (287) 90
T_ADDOP (288) 85


Nonterminals, with rules where they appear

$accept (45)
    on left: 0
Program (46)
    on left: 2, on right: 0
$@1 (47)
    on left: 1, on right: 2
TypeDefinitions (48)
    on left: 3, on right: 5
OptTypeDefinitions (49)
    on left: 4 5, on right: 2
_OptTypeDefinitions (50)
    on left: 6 7, on right: 3 7
TypeDefinition (51)
    on left: 10, on right: 3 7
$@2 (52)
    on left: 8, on right: 10
$@3 (53)
    on left: 9, on right: 10
VariableDeclarations (54)
    on left: 11, on right: 15 42
VariableDeclaration (55)
    on left: 13, on right: 11 17
$@4 (56)
    on left: 12, on right: 13
OptVariableDeclarations (57)
    on left: 14 15, on right: 2
_OptVariableDeclarations (58)
    on left: 16 17, on right: 11 17
OptSubprogramDeclarations (59)
    on left: 18 19, on right: 2
SubprogramDeclarations (60)
    on left: 20 21, on right: 19 21
SubprogramDeclaration (61)
    on left: 22 23, on right: 21
ProcedureDeclaration (62)
    on left: 26, on right: 22
$@5 (63)
    on left: 24, on right: 26
$@6 (64)
    on left: 25, on right: 26
FunctionDeclaration (65)
    on left: 29, on right: 23
$@7 (66)
    on left: 27, on right: 29
$@8 (67)
    on left: 28, on right: 29
DeclarationBody (68)
    on left: 30 31, on right: 26 29
FormalParameterList (69)
    on left: 33 36, on right: 26 29
$@9 (70)
    on left: 32, on right: 33
$@10 (71)
    on left: 34, on right: 36
$@11 (72)
    on left: 35, on right: 36
OptIdentifiers (73)
    on left: 37 39, on right: 36 39 76
$@12 (74)
    on left: 38, on right: 39
Block (75)
    on left: 41 42, on right: 30
$@13 (76)
    on left: 40, on right: 41
CompoundStatement (77)
    on left: 43, on right: 2 41 42 54
StatementSequence (78)
    on left: 44, on right: 43
Statement (79)
    on left: 45 46, on right: 44 55 56 58 60 62
SimpleStatement (80)
    on left: 47 48 49, on right: 45
AssignmentStatement (81)
    on left: 51, on right: 48
$@14 (82)
    on left: 50, on right: 51
ProcedureStatement (83)
    on left: 53, on right: 49
$@15 (84)
    on left: 52, on right: 53
StructuredStatement (85)
    on left: 54 55 56 58, on right: 46
$@16 (86)
    on left: 57, on right: 58
CloseIf (87)
    on left: 59 60, on right: 55
Statements (88)
    on left: 61 62, on right: 44 62
Type (89)
    on left: 64 69 72, on right: 10 13 36 39 69 76
$@17 (90)
    on left: 63, on right: 64
$@18 (91)
    on left: 65, on right: 69
$@19 (92)
    on left: 66, on right: 69
$@20 (93)
    on left: 67, on right: 69
$@21 (94)
    on left: 68, on right: 69
$@22 (95)
    on left: 70, on right: 72
$@23 (96)
    on left: 71, on right: 72
ResultType (97)
    on left: 73, on right: 29
FieldList (98)
    on left: 74 76, on right: 72
$@24 (99)
    on left: 75, on right: 76
Constant (100)
    on left: 77 78, on right: 69
Expression (101)
    on left: 79 80, on right: 51 55 56 58 99 112 114 116
RelationalOp (102)
    on left: 81 82, on right: 80
SimpleExpression (103)
    on left: 83 84, on right: 79 80
AddOp (104)
    on left: 85 86, on right: 89
Term (105)
    on left: 87, on right: 83 84 89
Summand (106)
    on left: 88 89, on right: 83 84 89
MulOp (107)
    on left: 90 91 92 93, on right: 101
Factor (108)
    on left: 94 95 96 97 98 99, on right: 87 98 101
Multiplicand (109)
    on left: 100 101, on right: 87 101
FunctionReference (110)
    on left: 103, on right: 97
$@25 (111)
    on left: 102, on right: 103
Variable (112)
    on left: 105, on right: 51 96
$@26 (113)
    on left: 104, on right: 105
ComponentSelection (114)
    on left: 106 109 112, on right: 105 109 112
$@27 (115)
    on left: 107, on right: 109
$@28 (116)
    on left: 108, on right: 109
$@29 (117)
    on left: 110, on right: 112
$@30 (118)
    on left: 111, on right: 112
ActualParameterList (119)
    on left: 113 114, on right: 53 103
OptExpressions (120)
    on left: 115 116, on right: 114 116
IdentifierList (121)
    on left: 118, on right: 13 36 39 76
$@31 (122)
    on left: 117, on right: 118
Identifiers (123)
    on left: 119 121, on right: 118 121
$@32 (124)
    on left: 120, on right: 121
Sign (125)
    on left: 122 123, on right: 78 84


state 0

    0 $accept: . Program $end

    T_PROGRAM  shift, and go to state 1

    Program  go to state 2


state 1

    2 Program: T_PROGRAM . T_ID $@1 ';' OptTypeDefinitions OptVariableDeclarations OptSubprogramDeclarations CompoundStatement '.'

    T_ID  shift, and go to state 3


state 2

    0 $accept: Program . $end

    $end  shift, and go to state 4


state 3

    2 Program: T_PROGRAM T_ID . $@1 ';' OptTypeDefinitions OptVariableDeclarations OptSubprogramDeclarations CompoundStatement '.'

    $default  reduce using rule 1 ($@1)

    $@1  go to state 5


state 4

    0 $accept: Program $end .

    $default  accept


state 5

    2 Program: T_PROGRAM T_ID $@1 . ';' OptTypeDefinitions OptVariableDeclarations OptSubprogramDeclarations CompoundStatement '.'

    ';'  shift, and go to state 6


state 6

    2 Program: T_PROGRAM T_ID $@1 ';' . OptTypeDefinitions OptVariableDeclarations OptSubprogramDeclarations CompoundStatement '.'

    T_TYPE  shift, and go to state 7

    $default  reduce using rule 4 (OptTypeDefinitions)

    TypeDefinitions     go to state 8
    OptTypeDefinitions  go to state 9


state 7

    3 TypeDefinitions: T_TYPE . TypeDefinition ';' _OptTypeDefinitions

    T_ID  shift, and go to state 10

    TypeDefinition  go to state 11


state 8

    5 OptTypeDefinitions: TypeDefinitions .

    $default  reduce using rule 5 (OptTypeDefinitions)


state 9

    2 Program: T_PROGRAM T_ID $@1 ';' OptTypeDefinitions . OptVariableDeclarations OptSubprogramDeclarations CompoundStatement '.'

    T_VAR  shift, and go to state 12

    $default  reduce using rule 14 (OptVariableDeclarations)

    VariableDeclarations     go to state 13
    OptVariableDeclarations  go to state 14


state 10

   10 TypeDefinition: T_ID . $@2 '=' Type $@3

    $default  reduce using rule 8 ($@2)

    $@2  go to state 15


state 11

    3 TypeDefinitions: T_TYPE TypeDefinition . ';' _OptTypeDefinitions

    ';'  shift, and go to state 16


state 12

   11 VariableDeclarations: T_VAR . VariableDeclaration ';' _OptVariableDeclarations

    T_ID  shift, and go to state 17

    VariableDeclaration  go to state 18
    IdentifierList       go to state 19


state 13

   15 OptVariableDeclarations: VariableDeclarations .

    $default  reduce using rule 15 (OptVariableDeclarations)


state 14

    2 Program: T_PROGRAM T_ID $@1 ';' OptTypeDefinitions OptVariableDeclarations . OptSubprogramDeclarations CompoundStatement '.'

    T_FUNCTION   shift, and go to state 20
    T_PROCEDURE  shift, and go to state 21

    T_BEGIN   reduce using rule 18 (OptSubprogramDeclarations)
    T_BEGIN   [reduce using rule 20 (SubprogramDeclarations)]
    $default  reduce using rule 18 (OptSubprogramDeclarations)

    OptSubprogramDeclarations  go to state 22
    SubprogramDeclarations     go to state 23
    SubprogramDeclaration      go to state 24
    ProcedureDeclaration       go to state 25
    FunctionDeclaration        go to state 26


state 15

   10 TypeDefinition: T_ID $@2 . '=' Type $@3

    '='  shift, and go to state 27


state 16

    3 TypeDefinitions: T_TYPE TypeDefinition ';' . _OptTypeDefinitions

    T_ID  shift, and go to state 10

    $default  reduce using rule 6 (_OptTypeDefinitions)

    _OptTypeDefinitions  go to state 28
    TypeDefinition       go to state 29


state 17

  118 IdentifierList: T_ID . $@31 Identifiers

    $default  reduce using rule 117 ($@31)

    $@31  go to state 30


state 18

   11 VariableDeclarations: T_VAR VariableDeclaration . ';' _OptVariableDeclarations

    ';'  shift, and go to state 31


state 19

   13 VariableDeclaration: IdentifierList . ':' Type $@4

    ':'  shift, and go to state 32


state 20

   29 FunctionDeclaration: T_FUNCTION . T_ID $@7 '(' FormalParameterList ')' ':' ResultType $@8 ';' DeclarationBody

    T_ID  shift, and go to state 33


state 21

   26 ProcedureDeclaration: T_PROCEDURE . T_ID $@5 '(' FormalParameterList $@6 ')' ';' DeclarationBody

    T_ID  shift, and go to state 34


state 22

    2 Program: T_PROGRAM T_ID $@1 ';' OptTypeDefinitions OptVariableDeclarations OptSubprogramDeclarations . CompoundStatement '.'

    T_BEGIN  shift, and go to state 35

    CompoundStatement  go to state 36


state 23

   19 OptSubprogramDeclarations: SubprogramDeclarations .

    $default  reduce using rule 19 (OptSubprogramDeclarations)


state 24

   21 SubprogramDeclarations: SubprogramDeclaration . ';' SubprogramDeclarations

    ';'  shift, and go to state 37


state 25

   22 SubprogramDeclaration: ProcedureDeclaration .

    $default  reduce using rule 22 (SubprogramDeclaration)


state 26

   23 SubprogramDeclaration: FunctionDeclaration .

    $default  reduce using rule 23 (SubprogramDeclaration)


state 27

   10 TypeDefinition: T_ID $@2 '=' . Type $@3

    T_ARRAY   shift, and go to state 38
    T_RECORD  shift, and go to state 39
    T_ID      shift, and go to state 40

    Type  go to state 41


state 28

    3 TypeDefinitions: T_TYPE TypeDefinition ';' _OptTypeDefinitions .

    $default  reduce using rule 3 (TypeDefinitions)


state 29

    7 _OptTypeDefinitions: TypeDefinition . ';' _OptTypeDefinitions

    ';'  shift, and go to state 42


state 30

  118 IdentifierList: T_ID $@31 . Identifiers

    ','  shift, and go to state 43

    $default  reduce using rule 119 (Identifiers)

    Identifiers  go to state 44


state 31

   11 VariableDeclarations: T_VAR VariableDeclaration ';' . _OptVariableDeclarations
